--- a/.commitlintrc.json
+++ b/.commitlintrc.json
@@ -6,6 +6,7 @@
       "always",
       ["feat", "fix", "docs", "style", "refactor", "test", "chore", "perf", "ci", "build", "revert"]
     ],
-    "subject-case": [2, "always", "sentence-case"]
+    "subject-case": [2, "always", "sentence-case"],
+    "body-max-line-length": [0]
   }
 }
