--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -15,6 +15,8 @@ jobs:
           fetch-depth: 0
 
       - uses: wagoid/commitlint-github-action@v6
+        with:
+          configFile: .commitlintrc.json
 
   changed-files:
     name: Lint Changed Files
