--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -2,6 +2,7 @@
   "name": "@qoomb/api",
   "version": "0.1.0",
   "private": true,
+  "license": "SEE LICENSE IN ../../LICENSE.md",
   "main": "./src/main.ts",
   "types": "./src/main.ts",
   "exports": {
