ci: Add statuses:write permission to CodeQL workflow
Fixes GitHub warning about missing permission for status reports

--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -24,6 +24,8 @@ jobs:
       # Required for workflows in private repositories
       contents: read
       actions: read
+      # Required for status reports
+      statuses: write
 
     strategy:
       fail-fast: false
