--- a/turbo.json
+++ b/turbo.json
@@ -26,7 +26,7 @@
       "inputs": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.json"]
     },
     "type-check": {
-      "dependsOn": ["^type-check"],
+      "dependsOn": ["^build"],
       "cache": true,
       "inputs": ["src/**/*.ts", "src/**/*.tsx", "tsconfig.json"]
     },
