--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -31,6 +31,8 @@
     "@vitejs/plugin-react": "^5.1.3",
     "eslint": "^9.39.2",
     "typescript": "^5.9.3",
-    "vite": "^7.3.1"
+    "vite": "^7.3.1",
+    "vite-plugin-pwa": "^1.2.0",
+    "workbox-window": "^7.4.0"
   }
 }
