feat(web): Add development debug panel
Add comprehensive dev-only debugging panel with:
- Floating tab on right side (always visible in dev mode)
- Mobile setup section with QR codes for certificates and app
- Environment info displaying URLs and config
- Backend health check with auto-refresh
- Network status monitoring (online/offline)
- Quick actions: cache controls, Prisma Studio, console logs

Features:
- Only visible when import.meta.env.DEV === true
- Completely excluded from production builds
- Qoomb yellow/black branding
- Smooth slide-in animation from right
- Single source of truth for APP_VERSION

Components:
- DevPanel.tsx: Main sliding sidebar
- DevPanelTab.tsx: Floating button
- sections/MobileSetup.tsx: QR codes for mobile dev
- sections/EnvironmentInfo.tsx: Config display
- sections/HealthCheck.tsx: Backend health monitoring
- sections/NetworkStatus.tsx: Network detection
- sections/QuickActions.tsx: Dev utilities

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,9 @@ out
 .env
 .env*.local
 
+# Local SSL certificates (mkcert)
+certs/
+
 # Turbo
 .turbo
 
@@ -47,3 +50,4 @@ prisma/migrations
 *.db-journal
 *.sqlite
 *.sqlite3
+apps/web/.env.local
