--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,9 +13,11 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@qoomb/ui": "workspace:*",
     "@tanstack/react-query": "^5.90.20",
     "@trpc/client": "^11.9.0",
     "@trpc/react-query": "^11.9.0",
+    "qrcode.react": "^4.2.0",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
     "react-router-dom": "^7.13.0",
