--- a/turbo.json
+++ b/turbo.json
@@ -11,7 +11,7 @@
       "persistent": true
     },
     "lint": {
-      "dependsOn": ["^lint"],
+      "dependsOn": ["^build"],
       "cache": true,
       "inputs": ["src/**/*.ts", "src/**/*.tsx", ".eslintrc.json"]
     },
