--- a/packages/validators/package.json
+++ b/packages/validators/package.json
@@ -13,6 +13,7 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "sanitize-html": "^2.17.0",
     "zod": "^4.3.6"
   },
   "devDependencies": {
@@ -20,6 +21,7 @@
     "@qoomb/tsconfig": "workspace:*",
     "@qoomb/types": "workspace:*",
     "@types/node": "^25.2.2",
+    "@types/sanitize-html": "^2.16.0",
     "typescript": "^5.9.3"
   }
 }
