--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -28,10 +28,12 @@
     "@qoomb/tsconfig": "workspace:*",
     "@qoomb/types": "workspace:*",
     "@qoomb/validators": "workspace:*",
+    "@tailwindcss/vite": "^4.1.18",
     "@types/react": "^19.2.13",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.3",
     "eslint": "^9.39.2",
+    "tailwindcss": "^4.1.18",
     "typescript": "^5.9.3",
     "vite": "^7.3.1",
     "vite-plugin-pwa": "^1.2.0",
