--- a/package.json
+++ b/package.json
@@ -58,7 +58,8 @@
     "overrides": {
       "lodash@>=4.0.0 <=4.17.22": ">=4.17.23",
       "hono@<4.11.7": ">=4.11.7",
-      "tar@<7.5.7": ">=7.5.7"
+      "tar@<7.5.7": ">=7.5.7",
+      "@types/node": "^25.2.2"
     }
   }
 }
