feat(auth): Phase 2 — complete auth frontend + backend
Backend:
- Prisma migration: isSystemAdmin, PassKeyCredential, EmailVerificationToken,
  PasswordResetToken, Invitation models
- Email module: pluggable transports (console/SMTP/Resend), Handlebars templates,
  fix webpack __dirname path resolution for HBS assets
- System config service: ALLOW_OPEN_REGISTRATION, ALLOW_FORGOT_PASSWORD,
  ALLOW_PASSKEYS env flags with explicit true/false/0/1/yes/no parsing
- Auth service: forgot password, email verification, invitations, first-user
  SystemAdmin seeding, PassKey loginWithPassKey, moved membership check after
  password verify to prevent user enumeration
- PassKey service: WebAuthn registration + authentication via @simplewebauthn/server,
  Redis challenge sessions (5 min TTL)
- New tRPC endpoints: requestPasswordReset, resetPassword, verifyEmail,
  sendEmailVerification, sendInvitation, registerWithInvitation, passkey.*,
  getUserHives, switchHive, getSystemConfig

Frontend:
- Auth state: in-memory access token (tokenStore), localStorage refresh token,
  AuthContext + useReducer, silent refresh on mount, auto-refresh 5 min before expiry
- React Router v7 routing with AuthGuard (redirect to /login if unauthenticated)
- Auth pages: Login, Register, ForgotPassword, ResetPassword, VerifyEmail
- AuthLayout: desktop two-panel (dark brand left + form right), mobile dark bg + card
- PassKeyButton (WebAuthn login), PassKeyManager (register/list/remove keys)
- HiveSwitcher dropdown in Topbar (hidden if single hive)
- EmailVerificationBanner (soft prompt, dismissible, yellow bg with correct token)
- @qoomb/ui Vite alias to source for HMR without rebuild
- Button: py-* padding (not h-*), cursor-pointer, disabled:cursor-not-allowed

--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -4,7 +4,10 @@
     "baseUrl": ".",
     "paths": {
       "@qoomb/api/*": ["../../apps/api/*"]
-    }
+    },
+    // Required to parse NestJS decorator syntax in API source files
+    // that are transitively included when importing AppRouter type
+    "experimentalDecorators": true
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
