--- a/.env.example
+++ b/.env.example
@@ -103,10 +103,17 @@ SESSION_SECRET="change-me-in-production-session-secret-32-chars"
 # ==============================================================================
 # FEATURE FLAGS
 # ==============================================================================
-# Enable/disable user registration (true/false)
-ENABLE_REGISTRATION=true
+# Allow anyone to register a new hive (false = invite-only, DEFAULT)
+# Set to true only if you want open registration
+ALLOW_OPEN_REGISTRATION=false
 
-# Enable/disable external calendar synchronization (true/false)
+# Allow users to request a password reset via email (true = enabled, DEFAULT)
+ALLOW_FORGOT_PASSWORD=true
+
+# Allow PassKey (WebAuthn) authentication (true = enabled, DEFAULT)
+ALLOW_PASSKEYS=true
+
+# Enable/disable external calendar synchronization
 ENABLE_EXTERNAL_CALENDAR_SYNC=false
 
 # ==============================================================================
