feat(auth): Default ALLOW_FORGOT_PASSWORD to false
Password reset requires email delivery to be configured.
Set ALLOW_FORGOT_PASSWORD=true to enable it explicitly.

--- a/.env.example
+++ b/.env.example
@@ -107,8 +107,9 @@ SESSION_SECRET="change-me-in-production-session-secret-32-chars"
 # Set to true only if you want open registration
 ALLOW_OPEN_REGISTRATION=false
 
-# Allow users to request a password reset via email (true = enabled, DEFAULT)
-ALLOW_FORGOT_PASSWORD=true
+# Allow users to request a password reset via email (false = disabled, DEFAULT)
+# Set to true only if email delivery is configured
+ALLOW_FORGOT_PASSWORD=false
 
 # Allow PassKey (WebAuthn) authentication (true = enabled, DEFAULT)
 ALLOW_PASSKEYS=true
