--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -24,6 +24,7 @@
     "db:migrate": "dotenv -e ../../.env -- prisma migrate deploy",
     "db:generate": "dotenv -e ../../.env -- prisma generate",
     "db:push": "dotenv -e ../../.env -- prisma db push",
+    "db:seed": "dotenv -e ../../.env -- prisma db seed",
     "db:studio": "dotenv -e ../../.env -- prisma studio"
   },
   "dependencies": {
@@ -37,9 +38,12 @@
     "@nestjs/throttler": "^6.5.0",
     "@prisma/adapter-pg": "^7.3.0",
     "@prisma/client": "^7.3.0",
+    "@simplewebauthn/server": "^13.2.2",
     "@trpc/server": "^11.9.0",
     "bcrypt": "^6.0.0",
     "fastify": "^5.7.4",
+    "handlebars": "^4.7.8",
+    "nodemailer": "^8.0.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "pg": "^8.18.0",
@@ -47,6 +51,7 @@
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.2",
     "superjson": "^2.2.6",
+    "typesafe-i18n": "^5.27.1",
     "zod": "^4.3.6"
   },
   "devDependencies": {
@@ -57,7 +62,9 @@
     "@qoomb/types": "workspace:*",
     "@qoomb/validators": "workspace:*",
     "@types/bcrypt": "^6.0.0",
+    "@types/handlebars": "^4.1.0",
     "@types/node": "^25.2.2",
+    "@types/nodemailer": "^7.0.9",
     "@types/passport-jwt": "^4.0.1",
     "@types/pg": "^8.16.0",
     "eslint": "^9.39.2",
