--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -16,6 +16,7 @@
     "@qoomb/eslint-config": "workspace:^",
     "@qoomb/tsconfig": "workspace:*",
     "@types/node": "^25.2.2",
+    "eslint": "^9.39.2",
     "typescript": "^5.9.3"
   }
 }
