--- a/packages/validators/package.json
+++ b/packages/validators/package.json
@@ -22,6 +22,7 @@
     "@qoomb/types": "workspace:*",
     "@types/node": "^25.2.2",
     "@types/sanitize-html": "^2.16.0",
+    "eslint": "^9.39.2",
     "typescript": "^5.9.3"
   }
 }
