ci: Fix workflow configuration issues across all pipelines
- Add merge_group trigger to pr-checks.yml so Lint check reports in
  the merge queue (was stalling indefinitely without this)
- Skip commit validation job for merge_group events (no PR context)
- Pin trivy-action to v0.34.0 instead of @master (supply chain safety)
- Remove hardcoded pnpm version from release.yml and sbom.yml so all
  workflows consistently derive it from packageManager in package.json

--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -3,11 +3,14 @@ name: PR Checks
 on:
   pull_request:
     types: [opened, synchronize, reopened]
+  merge_group:
 
 jobs:
   validate-commits:
     name: Validate Commit Messages
     runs-on: ubuntu-latest
+    # Commit validation only makes sense for PRs, not merge group
+    if: github.event_name == 'pull_request'
 
     steps:
       - uses: actions/checkout@v6
