ci: Harden all workflows with permissions, timeouts and cleanup
- Add permissions: contents: read to ci.yml and version-check.yml
  (principle of least privilege; prevents token misuse if action compromised)
- Add permissions: contents/pull-requests: read, statuses: write to
  pr-checks.yml (minimal scopes for commitlint + lint jobs)
- Add timeout-minutes: 15 to quality job, 20 to test job, 10 to lint job
  (prevents runaway jobs from consuming 6h of CI minutes)
- Remove fetch-depth: 0 from ci.yml quality job (not needed for
  lint/type-check/build; default shallow clone is faster)
- Remove Expose workspace binaries step from ci.yml (no longer needed
  since eslint is declared as direct devDependency in all packages)
- Reduce sbom.yml permissions: remove security-events: write (unused
  after SARIF upload steps were removed in previous cleanup)
- Remove Docker ecosystem from dependabot.yml (no Dockerfile exists)
- Fix dependabot.yml reviewer: ben -> Ben-Gee (correct GitHub username)

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -53,7 +53,7 @@ updates:
       - 'dependencies'
       - 'automated'
     reviewers:
-      - 'ben' # Replace with your GitHub username
+      - 'Ben-Gee'
     commit-message:
       prefix: 'chore'
       include: 'scope'
@@ -71,17 +71,3 @@ updates:
       - 'automated'
     commit-message:
       prefix: 'ci'
-
-  # Docker updates (if you add Dockerfile later)
-  - package-ecosystem: 'docker'
-    directory: '/'
-    schedule:
-      interval: 'weekly'
-      day: 'monday'
-      time: '06:00'
-    open-pull-requests-limit: 5
-    labels:
-      - 'docker'
-      - 'automated'
-    commit-message:
-      prefix: 'chore'
