--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -5,6 +5,11 @@ on:
     types: [opened, synchronize, reopened]
   merge_group:
 
+permissions:
+  contents: read
+  pull-requests: read
+  statuses: write
+
 jobs:
   validate-commits:
     name: Validate Commit Messages
@@ -24,6 +29,7 @@ jobs:
   lint:
     name: Lint
     runs-on: ubuntu-latest
+    timeout-minutes: 10
 
     steps:
       - uses: actions/checkout@v6
