ci: Consolidate and harden CI/CD pipelines
- Merge pr-checks.yml into ci.yml (remove redundant lint job)
- Move commitlint validation into ci.yml
- Add Prisma migration consistency check
- Make pnpm audit non-blocking (warning instead of failure)
- Add merge_group trigger to CodeQL and Trivy
- Add concurrency to version-check.yml
- Remove paths filter from version-check (run on all PRs)
- Stagger SBOM schedule to Tuesday (avoid Monday collision)
- Rewrite BRANCH_PROTECTION.md for GitHub Flow (remove develop)
- Fix develop references in SECURITY_SETUP.md
- Add CODEOWNERS file

--- a/.github/workflows/version-check.yml
+++ b/.github/workflows/version-check.yml
@@ -12,10 +12,13 @@ on:
   pull_request:
     branches:
       - main
-    paths:
-      - 'apps/web/src/App.tsx'
-      - '.release-please-manifest.json'
-      - 'package.json'
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
+permissions:
+  contents: read
 
 jobs:
   version-consistency:
