--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,12 +5,30 @@ on:
     branches: [main]
   pull_request:
     branches: [main]
+  merge_group:
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
+permissions:
+  contents: read
+
 jobs:
+  validate-commits:
+    name: Validate Commit Messages
+    runs-on: ubuntu-latest
+    if: github.event_name == 'pull_request'
+
+    steps:
+      - uses: actions/checkout@v6
+        with:
+          fetch-depth: 0
+
+      - uses: wagoid/commitlint-github-action@v6
+        with:
+          configFile: .commitlintrc.json
+
   quality:
     name: Code Quality
     runs-on: ubuntu-latest
@@ -36,7 +54,7 @@ jobs:
           DATABASE_URL: postgresql://dummy:dummy@localhost/dummy
 
       - name: Security audit
-        run: pnpm audit --audit-level moderate
+        run: pnpm audit --audit-level moderate || echo "::warning::pnpm audit found vulnerabilities — review output above"
 
       - name: License compliance check
         run: |
@@ -73,6 +91,17 @@ jobs:
       - name: Type check
         run: pnpm run type-check
 
+      - name: Prisma migration consistency
+        run: |
+          cd apps/api
+          npx prisma migrate diff \
+            --from-migrations prisma/migrations \
+            --to-schema-datamodel prisma/schema.prisma \
+            --exit-code \
+          || (echo "❌ Prisma schema and migrations are out of sync!" && echo "Run 'pnpm db:migrate:dev' to create a migration for pending changes." && exit 1)
+        env:
+          DATABASE_URL: postgresql://dummy:dummy@localhost/dummy
+
       - name: Build
         run: pnpm run build
 
@@ -106,6 +135,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v6
+        with:
+          fetch-depth: 0
 
       - uses: pnpm/action-setup@v4
 
