--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -5,6 +5,7 @@ on:
     branches: [main]
   pull_request:
     branches: [main]
+  merge_group:
   schedule:
     # Run every Monday at 7:00 UTC (after CodeQL)
     - cron: '0 7 * * 1'
