--- a/.github/workflows/version-check.yml
+++ b/.github/workflows/version-check.yml
@@ -24,6 +24,7 @@ jobs:
   version-consistency:
     name: Check Version Consistency
     runs-on: ubuntu-latest
+    timeout-minutes: 5
     steps:
       - name: Checkout code
         uses: actions/checkout@v6
@@ -61,6 +62,7 @@ jobs:
   prevent-manual-bump:
     name: Prevent Manual Version Bumps
     runs-on: ubuntu-latest
+    timeout-minutes: 5
     if: "!contains(github.event.pull_request.title, 'chore: Release')"
     steps:
       - name: Checkout base branch
