--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -148,15 +148,14 @@ jobs:
       - name: Prisma migration consistency
         run: |
           cd apps/api
+          npx prisma migrate deploy
           npx prisma migrate diff \
-            --from-migrations prisma/migrations \
+            --from-config-datasource \
             --to-schema prisma/schema.prisma \
-            --shadow-database-url "$SHADOW_DATABASE_URL" \
             --exit-code \
           || (echo "❌ Prisma schema and migrations are out of sync!" && echo "Run 'pnpm db:migrate:dev' to create a migration for pending changes." && exit 1)
         env:
           DATABASE_URL: postgresql://postgres:postgres@localhost:5432/qoomb_test
-          SHADOW_DATABASE_URL: postgresql://postgres:postgres@localhost:5432/qoomb_test_shadow
 
       - name: Run tests
         run: pnpm run test
