ci: Consolidate and harden CI/CD pipelines (#31)
* ci: Consolidate and harden CI/CD pipelines

- Merge pr-checks.yml into ci.yml (remove redundant lint job)
- Move commitlint validation into ci.yml
- Add Prisma migration consistency check
- Make pnpm audit non-blocking (warning instead of failure)
- Add merge_group trigger to CodeQL and Trivy
- Add concurrency to version-check.yml
- Remove paths filter from version-check (run on all PRs)
- Stagger SBOM schedule to Tuesday (avoid Monday collision)
- Rewrite BRANCH_PROTECTION.md for GitHub Flow (remove develop)
- Fix develop references in SECURITY_SETUP.md
- Add CODEOWNERS file

* fix: Add missing eslint devDependency to types and validators packages

packages/types and packages/validators had lint scripts using eslint
but did not declare it as a devDependency. Worked locally due to pnpm
hoisting but failed in CI with --frozen-lockfile.

* ci: Add missing timeout-minutes, concurrency, and permissions to all workflows

* ci: Update all actions to latest versions, remove archived dependencies

- release-please: google-github-actions → googleapis (former archived)
- trivy-action: @master → @0.34.0 (pin to version for security)
- sbom: Remove archived sbom-generator-action and dead dependency-submission step

* fix(ci): Use --to-schema instead of removed --to-schema-datamodel flag

* fix(ci): Move Prisma migration check to test job with PostgreSQL

Prisma 6.x requires --shadow-database-url when using --from-migrations.
Moved the migration consistency check from the quality job (no DB) to
the test job which already has a PostgreSQL 18 service container.

* fix(ci): Use migrate deploy + config-datasource diff instead of shadow DB

The --shadow-database-url flag does not exist in this Prisma version.
Instead: deploy migrations to the test DB, then diff the live state
against the schema file. This is a more robust check anyway.

* fix(ci): Use pgvector/pgvector:pg18 image for vector extension support

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,15 +5,35 @@ on:
     branches: [main]
   pull_request:
     branches: [main]
+  merge_group:
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
+permissions:
+  contents: read
+
 jobs:
+  validate-commits:
+    name: Validate Commit Messages
+    runs-on: ubuntu-latest
+    timeout-minutes: 5
+    if: github.event_name == 'pull_request'
+
+    steps:
+      - uses: actions/checkout@v6
+        with:
+          fetch-depth: 0
+
+      - uses: wagoid/commitlint-github-action@v6
+        with:
+          configFile: .commitlintrc.json
+
   quality:
     name: Code Quality
     runs-on: ubuntu-latest
+    timeout-minutes: 15
 
     steps:
       - uses: actions/checkout@v6
@@ -36,7 +56,7 @@ jobs:
           DATABASE_URL: postgresql://dummy:dummy@localhost/dummy
 
       - name: Security audit
-        run: pnpm audit --audit-level moderate
+        run: pnpm audit --audit-level moderate || echo "::warning::pnpm audit found vulnerabilities — review output above"
 
       - name: License compliance check
         run: |
@@ -79,10 +99,11 @@ jobs:
   test:
     name: Tests
     runs-on: ubuntu-latest
+    timeout-minutes: 20
 
     services:
       postgres:
-        image: postgres:18
+        image: pgvector/pgvector:pg18
         env:
           POSTGRES_PASSWORD: postgres
           POSTGRES_DB: qoomb_test
@@ -106,6 +127,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v6
+        with:
+          fetch-depth: 0
 
       - uses: pnpm/action-setup@v4
 
@@ -119,6 +142,18 @@ jobs:
 
       - name: Generate Prisma Client
         run: pnpm run db:generate
+        env:
+          DATABASE_URL: postgresql://postgres:postgres@localhost:5432/qoomb_test
+
+      - name: Prisma migration consistency
+        run: |
+          cd apps/api
+          npx prisma migrate deploy
+          npx prisma migrate diff \
+            --from-config-datasource \
+            --to-schema prisma/schema.prisma \
+            --exit-code \
+          || (echo "❌ Prisma schema and migrations are out of sync!" && echo "Run 'pnpm db:migrate:dev' to create a migration for pending changes." && exit 1)
         env:
           DATABASE_URL: postgresql://postgres:postgres@localhost:5432/qoomb_test
 
