--- a/.github/workflows/sbom.yml
+++ b/.github/workflows/sbom.yml
@@ -10,24 +10,26 @@ on:
   workflow_dispatch:
   # Also run weekly to keep license info current
   schedule:
-    - cron: '0 6 * * 1' # Every Monday at 6:00 AM UTC
+    - cron: '0 8 * * 2' # Every Tuesday at 8:00 AM UTC
 
 permissions:
   contents: write
-  security-events: write
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.event_name }}
+  cancel-in-progress: true
 
 jobs:
   generate-sbom:
     name: Generate SBOM
     runs-on: ubuntu-latest
+    timeout-minutes: 15
     steps:
       - name: Checkout
         uses: actions/checkout@v6
 
       - name: Setup pnpm
         uses: pnpm/action-setup@v4
-        with:
-          version: 10.29.3
 
       - name: Setup Node.js
         uses: actions/setup-node@v6
@@ -71,16 +73,3 @@ jobs:
             sbom.json
             sbom.xml
             THIRD-PARTY-LICENSES.txt
-
-      # Submit SBOM to GitHub Dependency Graph
-      - name: Submit SBOM to Dependency Graph
-        uses: advanced-security/sbom-generator-action@v1
-        id: sbom-action
-        continue-on-error: true
-
-      - name: Upload SBOM to Dependency Submission API
-        if: steps.sbom-action.outcome == 'success'
-        uses: actions/dependency-submission-action@v3
-        continue-on-error: true
-        with:
-          sbom-file: sbom.json
