--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -5,6 +5,7 @@ on:
     branches: [main]
   pull_request:
     branches: [main]
+  merge_group:
   schedule:
     # Run every Monday at 7:00 UTC (after CodeQL)
     - cron: '0 7 * * 1'
@@ -29,7 +30,7 @@ jobs:
 
       # Scan filesystem for vulnerabilities
       - name: Run Trivy vulnerability scanner (Filesystem)
-        uses: aquasecurity/trivy-action@master
+        uses: aquasecurity/trivy-action@0.34.0
         with:
           scan-type: 'fs'
           scan-ref: '.'
@@ -50,7 +51,7 @@ jobs:
 
       # Scan configuration files (IaC)
       - name: Run Trivy vulnerability scanner (Config)
-        uses: aquasecurity/trivy-action@master
+        uses: aquasecurity/trivy-action@0.34.0
         with:
           scan-type: 'config'
           scan-ref: '.'
@@ -69,7 +70,7 @@ jobs:
 
       # Generate human-readable report
       - name: Run Trivy vulnerability scanner (Table format)
-        uses: aquasecurity/trivy-action@master
+        uses: aquasecurity/trivy-action@0.34.0
         if: always()
         with:
           scan-type: 'fs'
@@ -92,7 +93,7 @@ jobs:
 
       # Scan for secrets and misconfigurations
       - name: Run Trivy secret scanner
-        uses: aquasecurity/trivy-action@master
+        uses: aquasecurity/trivy-action@0.34.0
         with:
           scan-type: 'fs'
           scan-ref: '.'
