--- a/.github/workflows/version-check.yml
+++ b/.github/workflows/version-check.yml
@@ -12,15 +12,19 @@ on:
   pull_request:
     branches:
       - main
-    paths:
-      - 'apps/web/src/App.tsx'
-      - '.release-please-manifest.json'
-      - 'package.json'
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
+permissions:
+  contents: read
 
 jobs:
   version-consistency:
     name: Check Version Consistency
     runs-on: ubuntu-latest
+    timeout-minutes: 5
     steps:
       - name: Checkout code
         uses: actions/checkout@v6
@@ -58,6 +62,7 @@ jobs:
   prevent-manual-bump:
     name: Prevent Manual Version Bumps
     runs-on: ubuntu-latest
+    timeout-minutes: 5
     if: "!contains(github.event.pull_request.title, 'chore: Release')"
     steps:
       - name: Checkout base branch
