chore: Fix dev setup for Prisma Studio and Caddy cold-start
- Add --port 5555 --browser none to db:studio script so Studio always
  binds to the expected port and doesn't auto-open a browser tab
- Integrate Prisma Studio startup into just dev and just dev-extended
  (starts in background after 4s, killed on exit via trap)
- Add pkill for prisma studio to _dev-stop cleanup
- Replace hardcoded Prisma Studio anchor tag with smart PrismaStudioButton
  that checks availability via no-cors fetch before opening
- Extract getDevEnvironment() as single source of truth for dev URLs;
  used by EnvironmentInfo and QuickActions
- Add lb_try_duration 60s + lb_try_interval 500ms to Caddy Vite proxy
  blocks to avoid 502 errors during cold start
- Remove redundant X-Forwarded-For/X-Forwarded-Proto header_up directives
  (Caddy sets these automatically)

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -25,7 +25,7 @@
     "db:generate": "dotenv -e ../../.env -- prisma generate",
     "db:push": "dotenv -e ../../.env -- prisma db push",
     "db:seed": "dotenv -e ../../.env -- prisma db seed",
-    "db:studio": "dotenv -e ../../.env -- prisma studio"
+    "db:studio": "dotenv -e ../../.env -- prisma studio --port 5555 --browser none"
   },
   "dependencies": {
     "@fastify/helmet": "^13.0.2",
