chore: Add key rotation docs, db:reencrypt script, and minor fixes
- .env.example: document ENCRYPTION_KEY_CURRENT / _V1 / _V2 rotation vars
  with step-by-step deployment sequence
- package.json: add db:reencrypt script (ts-node wrapper around
  prisma/scripts/reencrypt.ts) for post-rotation PII re-encryption
- validators: emailSchema.min(1) — reject empty string before email check
- CLAUDE.md: correct @EncryptFields / @DecryptFields semantics (input args
  vs return value), update DON'T/DO examples and Critical Rule #2

--- a/.env.example
+++ b/.env.example
@@ -52,6 +52,19 @@ KEY_PROVIDER=environment
 # Command: openssl rand -base64 32
 ENCRYPTION_KEY="change-me-in-production-base64-encoded-32-chars"
 
+# --- Key Rotation (environment provider only) ---
+# To rotate the master key without downtime:
+#   1. Generate new key:  openssl rand -base64 32
+#   2. Replace ENCRYPTION_KEY above with the three vars below, then restart app.
+#      The app encrypts new data with V_CURRENT, still decrypts older V1 data.
+#   3. Run:  pnpm --filter @qoomb/api db:reencrypt          (dry run)
+#            pnpm --filter @qoomb/api db:reencrypt --execute
+#   4. Once complete: remove _V1 + _CURRENT; rename _V2 back to ENCRYPTION_KEY.
+#
+# ENCRYPTION_KEY_CURRENT=2
+# ENCRYPTION_KEY_V1=<old key — keep until re-encryption completes>
+# ENCRYPTION_KEY_V2=<new key from: openssl rand -base64 32>
+
 # --- Option 2: File Provider (Advanced self-hosting) ---
 # Load encryption key from encrypted file
 # KEY_PROVIDER=file
