fix(security): Pin GitHub Actions to SHA hashes for supply-chain security
Pin all actions in 7 workflow files to immutable SHA hashes:
- ci.yml: 6 actions pinned
- codeql.yml: 3 actions pinned
- release.yml: 4 actions pinned
- sbom.yml: 5 actions pinned
- scorecard.yml: 3 actions pinned
- trivy.yml: 9 actions pinned (2 jobs, multiple scans)
- version-check.yml: 1 action pinned

Addresses ~50 OSSF Scorecard 'Pinned-Dependencies' alerts. Using SHA
pinning prevents supply-chain attacks where compromised tags could
inject malicious code. Version comments preserved for maintainability.

Related security standards:
- OSSF Best Practices: Pinned Dependencies
- SLSA Level 3: Build integrity
- CWE-829: Inclusion of Functionality from Untrusted Control Sphere

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,11 +22,11 @@ jobs:
     if: github.event_name == 'pull_request'
 
     steps:
-      - uses: actions/checkout@v6
+      - uses: actions/checkout@1af3b93b6815bc44a9784bd300feb67ff0d1eeb3 # v6.0.0
         with:
           fetch-depth: 0
 
-      - uses: wagoid/commitlint-github-action@v6
+      - uses: wagoid/commitlint-github-action@51ea8a97669ae9c12a8e58fd2dce70d7ca2b194b # v6.0.2
         with:
           configFile: .commitlintrc.json
 
@@ -37,9 +37,9 @@ jobs:
     if: github.event_name == 'pull_request'
 
     steps:
-      - uses: actions/checkout@v6
+      - uses: actions/checkout@1af3b93b6815bc44a9784bd300feb67ff0d1eeb3 # v6.0.0
 
-      - uses: actions/dependency-review-action@v4
+      - uses: actions/dependency-review-action@ce3cf9537a52e8119d91fd484ab5b8a807627bf8 # v4.6.0
         with:
           # Block PRs that introduce new HIGH or CRITICAL vulnerabilities.
           # License compliance is handled separately in the quality job via pnpm licenses list.
@@ -51,13 +51,13 @@ jobs:
     timeout-minutes: 15
 
     steps:
-      - uses: actions/checkout@v6
+      - uses: actions/checkout@1af3b93b6815bc44a9784bd300feb67ff0d1eeb3 # v6.0.0
         with:
           fetch-depth: 0
 
-      - uses: pnpm/action-setup@v4
+      - uses: pnpm/action-setup@0c17529a66aca453f9227af23103ed11469b1e47 # v4.0.0
 
-      - uses: actions/setup-node@v6
+      - uses: actions/setup-node@2028fbc5c25fe9cf00d9f06a71cc4710d4507903 # v6.0.0
         with:
           node-version: '24'
           cache: 'pnpm'
@@ -144,13 +144,13 @@ jobs:
           - 6379:6379
 
     steps:
-      - uses: actions/checkout@v6
+      - uses: actions/checkout@1af3b93b6815bc44a9784bd300feb67ff0d1eeb3 # v6.0.0
         with:
           fetch-depth: 0
 
-      - uses: pnpm/action-setup@v4
+      - uses: pnpm/action-setup@0c17529a66aca453f9227af23103ed11469b1e47 # v4.0.0
 
-      - uses: actions/setup-node@v6
+      - uses: actions/setup-node@2028fbc5c25fe9cf00d9f06a71cc4710d4507903 # v6.0.0
         with:
           node-version: '24'
           cache: 'pnpm'
@@ -186,7 +186,7 @@ jobs:
           NODE_ENV: test
 
       - name: Upload coverage
-        uses: codecov/codecov-action@v5
+        uses: codecov/codecov-action@0561704f0f02c16a585d4c7555e57fa2e44cf909 # v5.5.2
         if: always()
         with:
           files: ./coverage/lcov.info
