--- a/.github/workflows/version-check.yml
+++ b/.github/workflows/version-check.yml
@@ -27,7 +27,7 @@ jobs:
     timeout-minutes: 5
     steps:
       - name: Checkout code
-        uses: actions/checkout@v6
+        uses: actions/checkout@1af3b93b6815bc44a9784bd300feb67ff0d1eeb3 # v6.0.0
 
       - name: Extract APP_VERSION from App.tsx
         id: app_version
