fix(security): Apply principle of least privilege to workflow permissions
Move excessive permissions from workflow-level to job-level:
- release.yml: contents/pull-requests write → job-level only
- sbom.yml: contents write → job-level only
- codeql.yml: remove unnecessary statuses write

All workflows now follow GitHub security best practices:
- Top-level: minimal read-only permissions
- Job-level: only what's specifically needed
- No write-all or overly permissive grants

Addresses OSSF Scorecard 'Token-Permissions' finding.

Related security standards:
- OSSF Best Practices: Least Privilege
- GitHub Security: Token Permissions
- CWE-732: Incorrect Permission Assignment

--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -14,11 +14,11 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
+# Only the permissions needed for CodeQL
 permissions:
-  security-events: write
-  contents: read
-  actions: read
-  statuses: write
+  security-events: write # Upload SARIF results
+  contents: read # Checkout code
+  actions: read # Read workflow metadata
 
 jobs:
   analyze:
